# param-api

./: .gitignore  Makefile  README.md  docker-compose.yml
.github/: pull_request_template.md
app/: Dockerfile  README.md  database.py  main.py  pyproject.toml
app/api/: db.py  main.py  s3.py
app/api/auth/: authentication.py  oauth2.py
app/api/cruds/: subject.py  user.py
app/api/domain/excel/: SA.xlsx  TA.xlsx  excel.py  山田太郎-2022年9月.xlsx
app/api/domain/excel/Model/: post.py  ptj.py  subject.py  user.py
app/api/domain/s3/: upload.py
app/api/models/: subject.py  user.py
app/api/routers/: auth.py  subject.py
app/api/schemas/: subject.py  user.py
app/api/tests/: s3.py  test_main.py
app/database/: __init__.py  ptj.py
app/ddd/domain/excel/: ptj.py
app/domain/excel/: SA.xlsx  excel.py  ptj.py  ~$output.xlsx
app/domain/excel/Model/: post.py  ptj.py  subject.py  user.py
app/models/: auth_user.py  ptj_request.py
app/tests/: post_json.py
db/config/: postgresql.conf
db/init/: 01-init.sql  02-users.sql  03-subjects.sql  04-ptj-request.sql  init.sql
docker/app/: Dockerfile  requirements.txt
docker/db/: Dockerfile
docker/env/: db.env
documents/: db.pu
parm/: .gitignore  Dockerfile  README.md  pom.xml
parm/documents/: DDD.md  authority.md  security.md
parm/pom-parent/: spring-boot-24.xml
parm/src/main/java/com/example/wsbp/: AdminProperties.java  MySession.java  WsbpApplication.java
parm/src/main/java/com/example/wsbp/page/: ParentPage.html  ParentPage.java  SignPage.html  (+1 more)
parm/src/main/resources/: application.properties
(+68 files in other folders)
