[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
openpyxl = "^3.0.10"
requests = "^2.28.1"
SQLAlchemy = "^1.4.41"
asyncpg = "^0.26.0"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
ghostscript = "^0.7"
boto3 = "^1.24.84"
pyjwt = {extras = ["crypto"], version = "^2.6.0"}


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.19.0"
aiosqlite = "^0.17.0"
httpx = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
